# Chat-With-SQL-Database

./: README.md  connections.py  main.py  mystudents.db  pyproject.toml  sql.py
